Fix typo (failback vs fallback).

--- a/grub-core/Makefile.am
+++ b/grub-core/Makefile.am
@@ -10,7 +10,7 @@ CCAS=$(TARGET_CC)
 
 if COND_GRUB_MKFONT
 if COND_HAVE_FONT_SOURCE
-TARGET_CFLAGS += -DUSE_ASCII_FAILBACK=1 -DHAVE_UNIFONT_WIDTHSPEC=1
+TARGET_CFLAGS += -DUSE_ASCII_FALLBACK=1 -DHAVE_UNIFONT_WIDTHSPEC=1
 endif
 endif
 
