--- a/conf/Makefile.common
+++ b/conf/Makefile.common
@@ -27,7 +27,7 @@ if COND_i386_ieee1275
 endif
 if COND_mips_loongson
   CFLAGS_PLATFORM += -mexplicit-relocs
-  CPPFLAGS_PLATFORM = -DUSE_ASCII_FAILBACK
+  CPPFLAGS_PLATFORM = -DUSE_ASCII_FALLBACK
 endif
 if COND_mips
   CFLAGS_PLATFORM += -mflush-func=grub_red_herring
