--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -77,7 +77,7 @@ kernel = {
   mips_qemu_mips_ldflags    = '-Wl,-Ttext,0x80200000';
 
   mips_arc_cppflags = '-DGRUB_DECOMPRESSOR_LINK_ADDR=$(TARGET_DECOMPRESSOR_LINK_ADDR)';
-  mips_loongson_cppflags = '-DUSE_ASCII_FAILBACK';
+  mips_loongson_cppflags = '-DUSE_ASCII_FALLBACK';
   i386_qemu_cppflags     = '-DGRUB_BOOT_MACHINE_LINK_ADDR=$(GRUB_BOOT_MACHINE_LINK_ADDR)';
   emu_cflags = '$(CFLAGS_GNULIB)';
   emu_cppflags = '$(CPPFLAGS_GNULIB)';
