* grub-core/script/execute.c (grub_script_execute_sourcecode): Split 	off new function grub_script_execute_new_scope. Change callers to use 	either of them as appropriate. 	* grub-core/commands/eval.c: New command eval. 	* docs/grub.texi (Commands): Document it.

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -704,6 +704,11 @@ module = {
 };
 
 module = {
+  name = eval;
+  common = commands/eval.c;
+};
+
+module = {
   name = extcmd;
   common = commands/extcmd.c;
   common = lib/arg.c;
