Move flavour-specific parts out of common cpio.c file and 	rename remaining to cpio_common.c

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -592,6 +592,12 @@ script = {
 
 script = {
   testcase;
+  name = grub_script_eval;
+  common = tests/grub_script_eval.in;
+};
+
+script = {
+  testcase;
   name = grub_script_test;
   common = tests/grub_script_test.in;
 };
