Support for cbfs. Also factor out the part which is common 	for all archives to a separate module. This splits tar from cpio 	as they are very different but keeps cpio, cpio_be, odc and newc 	together since they're very similar.

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -75,6 +75,8 @@ library = {
   common = grub-core/fs/afs.c;
   common = grub-core/fs/bfs.c;
   common = grub-core/fs/btrfs.c;
+  common = grub-core/fs/cbfs.c;
+  common = grub-core/fs/archelp.c;
   common = grub-core/fs/cpio.c;
   common = grub-core/fs/cpio_be.c;
   common = grub-core/fs/odc.c;
