* util/grub-script-check.c: Fail on scripts containing no commands, to guard against corrupted grub-mkconfig setups that produce no useful output. * tests/grub_script_no_commands.in: New test. * Makefile.util.def (grub_script_no_commands): Add. Reported by Hans Putter.  Fixes Debian bug #713886.

--- a/Makefile.util.def
+++ b/Makefile.util.def
@@ -750,6 +750,12 @@ script = {
 
 script = {
   testcase;
+  name = grub_script_no_commands;
+  common = tests/grub_script_no_commands.in;
+};
+
+script = {
+  testcase;
   name = partmap_test;
   common = tests/partmap_test.in;
 };
