--- a/util/grub-reboot.in
+++ b/util/grub-reboot.in
@@ -51,7 +51,11 @@ usage () {
     dirmsg="$(gettext_printf "expect GRUB images under the directory DIR/%s instead of the %s directory" "@grubdirname@" "$grubdir")"
     print_option_help "--boot-directory=$(gettext "DIR")" "$dirmsg"
     echo
-    gettext "MENU_ENTRY is a number, a menu item title or a menu item identifier."; echo
+    gettext "MENU_ENTRY is a number, a menu item title or a menu item identifier. Please note that menu items in
+submenus or sub-submenus require specifying the submenu components and then the
+menu item component. The titles should be separated using the greater-than
+character (>) with no extra spaces. Depending on your shell some characters including > may need escpaing. More information about this is available
+in the GRUB Manual in the section about the 'default' command. "; echo
     echo
     gettext "Report bugs to <bug-grub@gnu.org>."; echo
 }
