Fix arm-uboot compilation problem

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -696,6 +696,8 @@ module = {
   enable = powerpc_ieee1275;
   enable = mips_arc;
   enable = ia64_efi;
+  enable = arm_efi;
+  enable = arm_uboot;
 };
 
 module = {
