--- a/conf/Makefile.common
+++ b/conf/Makefile.common
@@ -59,6 +59,7 @@ CPPFLAGS_DEFAULT += -I$(top_builddir)/include
 CPPFLAGS_DEFAULT += -I$(top_srcdir)/grub-core/lib/libgcrypt-grub/include
 CPPFLAGS_DEFAULT += -I$(top_srcdir)/grub-core/lib/libgcrypt-grub/src/
 CCASFLAGS_DEFAULT = $(CPPFLAGS_DEFAULT) -DASM_FILE=1
+BUILD_CPPFLAGS += $(CPPFLAGS_DEFAULT)
 
 LDADD_KERNEL =
 
