--- a/conf/Makefile.extra-dist
+++ b/conf/Makefile.extra-dist
@@ -41,6 +41,7 @@ EXTRA_DIST += BUGS
 EXTRA_DIST += util/i386/efi/grub-dumpdevtree
 EXTRA_DIST += util/spkmodem-recv.c
 EXTRA_DIST += util/import_gcrypth.sed
+EXTRA_DIST += util/bin2h.c
 
 EXTRA_DIST += m4/gnulib-cache.m4
 EXTRA_DIST += m4/glibc2.m4
