Move ascii.h and widthspec.h generation to a separate build-time-only 	tool.

--- a/Makefile.am
+++ b/Makefile.am
@@ -69,8 +69,11 @@ starfield_theme_files = $(srcdir)/themes/starfield/blob_w.png $(srcdir)/themes/s
 build-grub-mkfont: util/grub-mkfont.c grub-core/unidata.c grub-core/kern/emu/argp_common.c grub-core/kern/emu/misc.c util/misc.c grub-core/gnulib/progname.c
 	$(BUILD_CC) -o $@ -I$(top_srcdir)/include $(BUILD_CFLAGS) $(BUILD_CPPFLAGS) -I$(top_srcdir)/grub-core/gnulib -DGRUB_MKFONT=1 -DGRUB_UTIL=1 $^ $(build_freetype_cflags) $(build_freetype_libs) $(LIBINTL)
 
-build-grub-bin2h: util/bin2h.c
-	$(BUILD_CC) -o $@ -I$(top_srcdir)/include $(BUILD_CFLAGS) $(BUILD_CPPFLAGS) $<
+build-grub-gen-asciih: util/grub-gen-asciih.c
+	$(BUILD_CC) -o $@ -I$(top_srcdir)/include $(BUILD_CFLAGS) $(BUILD_CPPFLAGS) -I$(top_srcdir)/grub-core/gnulib -DGRUB_MKFONT=1 -DGRUB_UTIL=1 $^ $(build_freetype_cflags) $(build_freetype_libs) $(LIBINTL) -Wall -Werror
+
+build-grub-gen-widthspec: util/grub-gen-widthspec.c
+	$(BUILD_CC) -o $@ -I$(top_srcdir)/include $(BUILD_CFLAGS) $(BUILD_CPPFLAGS) -I$(top_srcdir)/grub-core/gnulib -DGRUB_MKFONT=1 -DGRUB_UTIL=1 $^ $(build_freetype_cflags) $(build_freetype_libs) $(LIBINTL) -Wall -Werror
 
 if COND_STARFIELD
 starfield_DATA = dejavu_10.pf2 dejavu_12.pf2 dejavu_bold_14.pf2 dejavu_14.pf2 dejavu_16.pf2 $(starfield_theme_files)
@@ -107,20 +110,12 @@ euro.pf2: $(FONT_SOURCE) build-grub-mkfont
 	./build-grub-mkfont -o $@ $(FONT_SOURCE) -r 0x0-0x4ff,0x1e00-0x1fff,$(UNICODE_ARROWS),$(UNICODE_LINES)
 CLEANFILES += euro.pf2
 
-ascii.bitmaps: $(FONT_SOURCE) build-grub-mkfont
-	./build-grub-mkfont --ascii-bitmaps -o $@ $(FONT_SOURCE)
-CLEANFILES += ascii.bitmaps
+ascii.h: $(FONT_SOURCE) build-grub-gen-asciih
+	./build-grub-gen-asciih $(FONT_SOURCE) $@ 
+CLEANFILES += ascii.h
 
-ascii.h: ascii.bitmaps build-grub-bin2h
-	./build-grub-bin2h ascii_bitmaps < $< > $@
-CLEANFILES += ascii.h $(top_builddir)/grub-core/include/ascii.h
-
-widthspec.bin: $(FONT_SOURCE) build-grub-mkfont
-	./build-grub-mkfont --width-spec -o $@ $(FONT_SOURCE)
-CLEANFILES += widthspec.bin
-
-widthspec.h: widthspec.bin build-grub-bin2h
-	./build-grub-bin2h widthspec < $< > $@
+widthspec.h: $(FONT_SOURCE) build-grub-gen-asciih
+	./build-grub-gen-widthspec $(FONT_SOURCE) $@ 
 CLEANFILES += widthspec.h
 
 # Install config.h into platformdir
