* conf/Makefile.common: Fix typo.

--- a/conf/Makefile.common
+++ b/conf/Makefile.common
@@ -45,8 +45,8 @@ endif
 # Other options
 
 if ! COND_emu
-CFLAGS_PLATFORM += -Dfloat=__grub_poision
-CFLAGS_PLATFORM += -Ddouble=__grub_poision
+CFLAGS_PLATFORM += -Dfloat=__grub_poison
+CFLAGS_PLATFORM += -Ddouble=__grub_poison
 endif
 
 CPPFLAGS_DEFAULT = -DGRUB_FILE=\"$(subst $(srcdir)/,,$<)\"
