Fix dependencies on cygwin.
	* gentpl.py: Support variable dependencies. Add $TARGET_OBJ2ELF to
	dependencies when used and defined.
	* grub-core/Makefile.core.def (regexp): Add dependency on libgnulib.a.

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -615,6 +615,7 @@ module = {
   common = commands/regexp.c;
   common = commands/wildcard.c;
   ldadd = libgnulib.a;
+  dependencies = libgnulib.a;
   cflags = '$(CFLAGS_POSIX) $(CFLAGS_GNULIB)';
   cppflags = '$(CPPFLAGS_POSIX) $(CPPFLAGS_GNULIB)';
 };
