* config.h.in [GRUB_BUILD]: Explicitly undefine ENABLE_NLS.

--- a/config.h.in
+++ b/config.h.in
@@ -11,6 +11,7 @@
 #define BOOT_TIME_STATS @BOOT_TIME_STATS@
 
 #if defined (GRUB_BUILD)
+#undef ENABLE_NLS
 #define BUILD_SIZEOF_LONG @BUILD_SIZEOF_LONG@
 #define BUILD_SIZEOF_VOID_P @BUILD_SIZEOF_VOID_P@
 #if defined __APPLE__
