--- a/util/grub.d/00_header.in
+++ b/util/grub.d/00_header.in
@@ -50,31 +50,36 @@ cat << EOF
 	fi
 EOF
 
-if [ "x$GRUB_BUTTON_CMOS_ADDRESS" != "x" ]; then
-    cat <<EOF
-if cmostest $GRUB_BUTTON_CMOS_ADDRESS ; then
-   set default="${GRUB_DEFAULT_BUTTON}"
-elif [ "\${next_entry}" ] ; then
-   set default="\${next_entry}"
-   set next_entry=
-   save_env next_entry
-   set boot_once=true
-else
-   set default="${GRUB_DEFAULT}"
-fi
+# Assign default entry
+if [ "x$GRUB_BUTTON_CMOS_ADDRESS" != "x" ] ; then
+	cat <<EOF
+	if cmostest $GRUB_BUTTON_CMOS_ADDRESS
+	then
+		set default="${GRUB_DEFAULT_BUTTON}"
+	elif [ "\${next_entry}" ]
+	then
+		set default="\${next_entry}"
+		set next_entry=
+		save_env next_entry
+		set boot_once=true
+	else
+		set default="${GRUB_DEFAULT}"
+	fi
 EOF
 else
-    cat <<EOF
-if [ "\${next_entry}" ] ; then
-   set default="\${next_entry}"
-   set next_entry=
-   save_env next_entry
-   set boot_once=true
-else
-   set default="${GRUB_DEFAULT}"
-fi
+	cat <<EOF
+	if [ "\${next_entry}" ]
+	then
+		set default="\${next_entry}"
+		set next_entry=
+		save_env next_entry
+		set boot_once=true
+	else
+		set default="${GRUB_DEFAULT}"
+	fi
 EOF
-fi
+fi # finish if about GRUB_BUTTON_CMOS_ADDRESS
+
 cat <<EOF
 
 if [ x"\${feature_menuentry_id}" = xy ]; then
