--- a/util/grub.d/00_header.in
+++ b/util/grub.d/00_header.in
@@ -81,8 +81,7 @@ EOF
 fi # finish if about GRUB_BUTTON_CMOS_ADDRESS
 
 cat <<EOF
-	if [ x"\${feature_menuentry_id}" = xy ]
-	then
+	if [ x"\${feature_menuentry_id}" = xy ] ; then
 		menuentry_id_option="--id"
 	else
 		menuentry_id_option=""
@@ -90,8 +89,7 @@ cat <<EOF
 
 	export menuentry_id_option
 
-	if [ "\${prev_saved_entry}" ]
-	then
+	if [ "\${prev_saved_entry}" ] ; then
 		set saved_entry="\${prev_saved_entry}"
 		save_env saved_entry
 		set prev_saved_entry=
@@ -100,8 +98,7 @@ cat <<EOF
 	fi
 
 	function savedefault {
-	if [ -z "\${boot_once}" ]
-	then
+	if [ -z "\${boot_once}" ] ; then
 		saved_entry="\${chosen}"
 		save_env saved_entry
 	fi
@@ -119,8 +116,7 @@ else
 	# If all_video.mod isn't available load all modules available
 	# with versions prior to introduction of all_video.mod
 	cat <<EOF
-	if [ x\$feature_all_video_module = xy ]
-	then
+	if [ x\$feature_all_video_module = xy ] ; then
  		insmod all_video
 	else
 		insmod efi_gop
@@ -139,82 +135,88 @@ cat <<EOF
 }
 EOF
 
+# According GRUB_TERMINAL_INPUT and GRUB_TERMINAL_OUTPUT values, some decisions have to be taken
+# Assign default values and then process them
 serial=0;
 gfxterm=0;
-for x in ${GRUB_TERMINAL_INPUT} ${GRUB_TERMINAL_OUTPUT}; do
-    if [ xserial = "x$x" ]; then
-	serial=1;
-    fi
-    if [ xgfxterm = "x$x" ]; then
-	gfxterm=1;
-    fi
+for each in ${GRUB_TERMINAL_INPUT} ${GRUB_TERMINAL_OUTPUT}; do
+	if [ xserial = "x${each}" ]; then
+		serial=1;
+	fi
+	if [ xgfxterm = "x${each}" ]; then
+		gfxterm=1;
+	fi
 done
 
+# Process GRUB_SERIAL_COMMAND
 if [ "x$serial" = x1 ]; then
-    if [ "x${GRUB_SERIAL_COMMAND}" = "x" ] ; then
-	grub_warn "$(gettext "Requested serial terminal but GRUB_SERIAL_COMMAND is unspecified. Default parameters will be used.")"
-	GRUB_SERIAL_COMMAND=serial
-    fi
-    echo "${GRUB_SERIAL_COMMAND}"
+	if [ "x${GRUB_SERIAL_COMMAND}" = "x" ] ; then
+		grub_warn "$(gettext "Requested serial terminal but GRUB_SERIAL_COMMAND is unspecified. Default parameters will be used.")"
+		GRUB_SERIAL_COMMAND=serial
+	fi
+	echo "${GRUB_SERIAL_COMMAND}"
 fi
 
+# if gfxterm (graphics-mode output) is set
 if [ "x$gfxterm" = x1 ]; then
-    if [ -n "$GRUB_FONT" ] ; then
-       # Make the font accessible
-       prepare_grub_to_access_device `${grub_probe} --target=device "${GRUB_FONT}"`
-    cat << EOF
-if loadfont `make_system_path_relative_to_its_root "${GRUB_FONT}"` ; then
+	if [ -n "$GRUB_FONT" ] ; then
+		# Make the font accessible
+		prepare_grub_to_access_device `${grub_probe} --target=device "${GRUB_FONT}"`
+		cat << EOF
+		if loadfont `make_system_path_relative_to_its_root "${GRUB_FONT}"` ; then
 EOF
-    else
-	for dir in "${pkgdatadir}" "`echo '/@bootdirname@/@grubdirname@' | sed "s,//*,/,g"`" /usr/share/grub ; do
-	    for basename in unicode unifont ascii; do
-		path="${dir}/${basename}.pf2"
-		if is_path_readable_by_grub "${path}" > /dev/null ; then
-		    font_path="${path}"
-		else
-		    continue
-		fi
-		break 2
-	    done
-	done
-	if [ -n "${font_path}" ] ; then
-    cat << EOF
-if [ x\$feature_default_font_path = xy ] ; then
-   font=unicode
 else
+	for dir in "${pkgdatadir}" "`echo '/@bootdirname@/@grubdirname@' | sed "s,//*,/,g"`" /usr/share/grub ; do
+		for basename in unicode unifont ascii; do
+			path="${dir}/${basename}.pf2"
+			if is_path_readable_by_grub "${path}" > /dev/null ; then
+				font_path="${path}"
+			else
+				continue
+			fi
+			break 2
+		done
+	done
+	# if font_path is not NULL
+	if [ -n "${font_path}" ] ; then
+		cat << EOF
+		if [ x\$feature_default_font_path = xy ] ; then
+			font=unicode
+		else
 EOF
+
                 # Make the font accessible
 		prepare_grub_to_access_device `${grub_probe} --target=device "${font_path}"`
-    cat << EOF
-    font="`make_system_path_relative_to_its_root "${font_path}"`"
+		cat << EOF
+			font="`make_system_path_relative_to_its_root "${font_path}"`"
+		fi
+		if loadfont \$font ; then
+EOF
+	# if font_path is NULL, then use unicode
+	else
+		cat << EOF
+		if loadfont unicode ; then
+EOF
+	fi # finish if about font_path
 fi
 
-if loadfont \$font ; then
-EOF
-	    else
-    cat << EOF
-if loadfont unicode ; then
-EOF
-	    fi
-	fi
-
-    cat << EOF
-  set gfxmode=${GRUB_GFXMODE}
-  load_video
-  insmod gfxterm
+cat << EOF
+			set gfxmode=${GRUB_GFXMODE}
+			load_video
+			insmod gfxterm
 EOF
 
 # Gettext variables and module
 if [ "x${LANG}" != "xC" ] ; then
-  cat << EOF
-  set locale_dir=\$prefix/locale
-  set lang=${grub_lang}
-  insmod gettext
+	cat << EOF
+			set locale_dir=\$prefix/locale
+			set lang=${grub_lang}
+			insmod gettext
 EOF
 fi
 
 cat <<EOF
-fi
+		fi
 EOF
 fi
 
